--- a/testimonial.html
+++ b/testimonial.html
@@ -33,6 +33,7 @@
 </head>
 
 <body>
+
     <!-- Spinner Start -->
     <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
         <div class="spinner-border position-relative text-primary" style="width: 6rem; height: 6rem;" role="status"></div>
@@ -63,7 +64,7 @@
                         <a href="project.html" class="dropdown-item">Our Projects</a>
                         <a href="team.html" class="dropdown-item">Team Members</a>
                         <a href="appointment.html" class="dropdown-item">Appointment</a>
-                        <a href="testimonial.html" class="dropdown-item active">Testimonial</a>
+                        <a href="testimonial.html" class="dropdown-item active">Customers & Partners</a>
                         <a href="404.html" class="dropdown-item">404 Page</a>
                     </div>
                 </div>
@@ -78,12 +79,12 @@
     <!-- Page Header Start -->
     <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
-            <h1 class="display-1 text-white animated slideInDown">Testimonial</h1>
+            <h1 class="display-1 text-white animated slideInDown">Customers & Partners</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb text-uppercase mb-0">
                     <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
                     <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li>
-                    <li class="breadcrumb-item text-primary active" aria-current="page">Testimonial</li>
+                    <li class="breadcrumb-item text-primary active" aria-current="page">Customers & Partners</li>
                 </ol>
             </nav>
         </div>
@@ -99,7 +100,7 @@
                 <h1 class="display-5 mb-4">Thousands Of Customers Who Trust Us And Our Services</h1>
             </div>
             <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
-                <div class="testimonial-item text-center" data-dot="<img class='img-fluid' src='img/testimonial-1.jpg' alt=''>">
+                <div class="testimonial-item text-center" data-dot="<img class='img-fluid' src='img/testimonial-2.jpg' alt=''>">
                     <p class="fs-5">Exceptional design seamlessly blending elegance and practical functionality through Sketch Home's architectural design services has added a unique and sophisticated touch to my home, making it a place that reflects refined taste and provides unparalleled comfort .</p>
                     <h3>Mohamed Ali</h3>
                     <span class="text-primary">Profession</span>
@@ -109,11 +110,161 @@
                     <h3>Mohamed Amin</h3>
                     <span class="text-primary">Profession</span>
                 </div>
+                
             </div>      
         </div>
     </div>
     <!-- Testimonial End -->
-        
+    <div class="container-xxl py-5">
+        <div class="container">
+            <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                <h1 class="section-title">Our customers </h1>
+                <p> We are committed to providing the best services to our customers, and we believe that our success depends on their success. We always strive to understand their needs and desires, and provide innovative solutions that meet their requirements</p>
+            </div>
+            <div class="row g-0 team-items">
+                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="team-item position-relative">
+                        <div class="position-relative">
+                            <img class="img-fluid" src="img/dpi.jpg" alt="">
+                        </div>
+                        <div class="bg-light text-center p-4">
+                            <h3 class="mt-2">DPI</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                    <div class="team-item position-relative">
+                        <div class="position-relative">
+                            <img class="img-fluid" src="img/JCB-Logo.jpg" alt="">
+                        </div>
+                        <div class="bg-light text-center p-4">
+                            <h3 class="mt-2">JCB</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="team-item position-relative">
+                        <div class="position-relative">
+                            <img class="img-fluid" src="img/aps.png" alt="">
+                        </div>
+                        <div class="bg-light text-center p-4">
+                            <h3 class="mt-2">APS</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
+                    <div class="team-item position-relative">
+                        <div class="position-relative">
+                            <img class="img-fluid" src="img/safatGroup.jpg" alt="">
+                        </div>
+                        <div class="bg-light text-center p-4">
+                            <h3 class="mt-2">Safat Aviation Complex</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
+                    <div class="team-item position-relative">
+                        <div class="position-relative">
+                            <img class="img-fluid" src="img/SAFATFINAL.png" alt="">
+                        </div>
+                        <div class="bg-light text-center p-4">
+                            <h3 class="mt-2">Safat College of Science and Technology</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
+                    <div class="team-item position-relative">
+                        <div class="position-relative">
+                            <img class="img-fluid" src="img/highLevel.png" alt="">
+                        </div>
+                        <div class="bg-light text-center p-4">
+                            <h3 class="mt-2">High Level Aviation Academys</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
+                    <div class="team-item position-relative">
+                        <div class="position-relative">
+                            <img class="img-fluid" src="img/qatar.PNG" alt="">
+                        </div>
+                        <div class="bg-light text-center p-4">
+                            <h3 class="mt-2">Qatari Military Attache Khartoum</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
+                    <div class="team-item position-relative">
+                        <div class="position-relative">
+                            <img class="img-fluid" src="img/leleas.jpg" alt="">
+                        </div>
+                        <div class="bg-light text-center p-4">
+                            <h3 class="mt-2">LELAS Perfumes</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-xxl py-5">
+        <div class="container">
+            <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                <h1 class="section-title">Parterners</h1>
+                <p>We believe that our success is our partners' success, so we are committed to building strong partnerships with them based on trust and mutual respect. We always strive to cooperate with our partners to provide the best services to our customers and achieve our common goals.</p>
+            </div>
+            <div class="row g-0 team-items">
+                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                    <div class="team-item position-relative">
+                        <div class="position-relative">
+                            <img class="img-fluid" src="img/almaymoon.jpg" alt="">
+                        </div>
+                        <div class="bg-light text-center p-4">
+                            <h4 class="mt-2">AlMaymoon Concrete Co.</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="team-item position-relative">
+                        <div class="position-relative">
+                            <img class="img-fluid" src="img/dorado.jpg" alt="">
+                        </div>
+                        <div class="bg-light text-center p-4">
+                            <h4 class="mt-2">Dorado Multi Activities Co.</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
+                    <div class="team-item position-relative">
+                        <div class="position-relative">
+                            <img class="img-fluid" src="img/smartHome.jpg" alt="">
+                        </div>
+                        <div class="bg-light text-center p-4">
+                            <h4 class="mt-2">Smart Home</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
+                    <div class="team-item position-relative">
+                        <div class="position-relative">
+                            <img class="img-fluid" src="img/modren.jpg" alt="">
+                        </div>
+                        <div class="bg-light text-center p-4">
+                            <h4 class="mt-2">Modern Systems Sudan</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="team-item position-relative">
+                        <div class="position-relative">
+                            <img class="img-fluid" src="img/frame.jpg" alt="">
+                        </div>
+                        <div class="bg-light text-center p-4">
+                            <h4 class="mt-2">Frame Company Ltd</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Footer Start -->
     <div class="container-fluid bg-dark text-body footer mt-5 pt-5 px-0 wow fadeIn" data-wow-delay="0.1s">
@@ -188,6 +339,7 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+
 </body>
 
 </html>
