--- a/project.html
+++ b/project.html
@@ -7,7 +7,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
 
@@ -33,6 +33,9 @@
 </head>
 
 <body>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <!-- Spinner Start -->
     <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
         <div class="spinner-border position-relative text-primary" style="width: 6rem; height: 6rem;" role="status"></div>
@@ -61,7 +64,7 @@
                         <a href="project.html" class="dropdown-item active">Our Projects</a>
                         <a href="team.html" class="dropdown-item">Team Members</a>
                         <a href="appointment.html" class="dropdown-item">Appointment</a>
-                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+                        <a href="testimonial.html" class="dropdown-item"></a>
                         <a href="404.html" class="dropdown-item">404 Page</a>
                     </div>
                 </div>
@@ -78,11 +81,6 @@
         <div class="container py-5">
             <h1 class="display-1 text-white animated slideInDown">Projects</h1>
             <nav aria-label="breadcrumb animated slideInDown">
-                <ol class="breadcrumb text-uppercase mb-0">
-                    <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
-                    <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li>
-                    <li class="breadcrumb-item text-primary active" aria-current="page">Projects</li>
-                </ol>
             </nav>
         </div>
     </div>
@@ -109,7 +107,7 @@
                             <h3 class="m-0">03. Residential building - Mr. Abdalkalig Amin</h3>
                         </button>
                         <button class="nav-link w-100 d-flex align-items-center text-start p-4 mb-0" data-bs-toggle="pill" data-bs-target="#tab-pane-4" type="button">
-                            <h3 class="m-0">04. Office building – Safat Conference</h3>
+                            <h3 class="m-0">04. Office building - Safat Conference</h3>
                         </button>
                     </div>
                 </div>
@@ -119,8 +117,27 @@
                             <div class="row g-4">
                                 <div class="col-md-6" style="min-height: 350px;">
                                     <div class="position-relative h-100">
-                                        <img class="position-absolute img-fluid w-100 h-100" src="img/3.jpg"
-                                            style="object-fit: cover;" alt="">
+                                        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                                            <div class="carousel-inner">
+                                              <div class="carousel-item active">
+                                                <img class="d-block w-100" src="/img/zawaya-1.jpg" alt="First slide">
+                                              </div>
+                                              <div class="carousel-item">
+                                                <img class="d-block w-100" src="/img/zawaya-2.jpg" alt="Second slide">
+                                              </div>
+                                              <div class="carousel-item">
+                                                <img class="d-block w-100" src="/img/zawaya-3.jpg" alt="Third slide">
+                                              </div>
+                                            </div>
+                                            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                              <span class="sr-only">Previous</span>
+                                            </a>
+                                            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                              <span class="sr-only">Next</span>
+                                            </a>
+                                          </div>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
@@ -139,8 +156,27 @@
                             <div class="row g-4">
                                 <div class="col-md-6" style="min-height: 350px;">
                                     <div class="position-relative h-100">
-                                        <img class="position-absolute img-fluid w-100 h-100" src="img/heussin.jpg"
-                                            style="object-fit: cover;" alt="">
+                                        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                                            <div class="carousel-inner">
+                                              <div class="carousel-item active">
+                                                <img class="d-block w-100" src="/img/heussin-1.jpg" alt="First slide">
+                                              </div>
+                                              <div class="carousel-item">
+                                                <img class="d-block w-100" src="img/heussin-2.jpg" alt="Second slide">
+                                              </div>
+                                              <div class="carousel-item">
+                                                <img class="d-block w-100" src="img/heussin-3.jpg" alt="Third slide">
+                                              </div>
+                                            </div>
+                                            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                              <span class="sr-only">Previous</span>
+                                            </a>
+                                            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                              <span class="sr-only">Next</span>
+                                            </a>
+                                          </div>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
@@ -160,8 +196,27 @@
                             <div class="row g-4">
                                 <div class="col-md-6" style="min-height: 350px;">
                                     <div class="position-relative h-100">
-                                        <img class="position-absolute img-fluid w-100 h-100" src="img/2.jpg"
-                                            style="object-fit: cover;" alt="">
+                                       <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                                            <div class="carousel-inner">
+                                              <div class="carousel-item active">
+                                                <img class="d-block w-100" src="img/abdelgalik-1.jpg" alt="First slide">
+                                              </div>
+                                              <div class="carousel-item">
+                                                <img class="d-block w-100" src="img/abdelgalik-2.jpg" alt="Second slide">
+                                              </div>
+                                              <div class="carousel-item">
+                                                <img class="d-block w-100" src="img/abdelgalik-3.jpg" alt="Third slide">
+                                              </div>
+                                            </div>
+                                            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                              <span class="sr-only">Previous</span>
+                                            </a>
+                                            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                              <span class="sr-only">Next</span>
+                                            </a>
+                                          </div>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
@@ -181,8 +236,54 @@
                             <div class="row g-4">
                                 <div class="col-md-6" style="min-height: 350px;">
                                     <div class="position-relative h-100">
-                                        <img class="position-absolute img-fluid w-100 h-100" src="img/4.jpeg"
-                                            style="object-fit: cover;" alt="">
+                                        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                                            <div class="carousel-inner">
+                                                <div class="carousel-item active">
+                                                    <img class="d-block w-100" src="img/safat-1.jpg" alt="First slide">
+                                                  </div>
+                                              <div class="carousel-item">
+                                                <img class="d-block w-100" src="img/safat-2.jpg" alt="Second slide">
+                                              </div>
+                                              <div class="carousel-item">
+                                                <img class="d-block w-100" src="img/safat-3.jpg" alt="Third slide">
+                                              </div>
+                                              <div class="carousel-item">
+                                                <img class="d-block w-100" src="img/safat-4.jpg" alt="Third slide">
+                                              </div>
+                                              <div class="carousel-item">
+                                                <img class="d-block w-100" src="img/safat-5.jpg" alt="Third slide">
+                                              </div>
+                                              <div class="carousel-item">
+                                                <img class="d-block w-100" src="img/safat-6.jpg" alt="Third slide">
+                                              </div>
+                                              <div class="carousel-item">
+                                                <img class="d-block w-100" src="img/safat-7.jpg" alt="Third slide">
+                                              </div>
+                                              <div class="carousel-item">
+                                                <img class="d-block w-100" src="img/safat-8.jpg" alt="Third slide">
+                                              </div>
+                                              <div class="carousel-item">
+                                                <img class="d-block w-100" src="img/safat-9.jpg" alt="Third slide">
+                                              </div>
+                                              <div class="carousel-item">
+                                                <img class="d-block w-100" src="img/safat-10.jpg" alt="Third slide">
+                                              </div>
+                                              <div class="carousel-item">
+                                                <img class="d-block w-100" src="img/safat-11.jpg" alt="Third slide">
+                                              </div>
+                                              <div class="carousel-item">
+                                                <img class="d-block w-100" src="img/safat-12.jpg" alt="Third slide">
+                                              </div>
+                                            </div>
+                                            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                              <span class="sr-only">Previous</span>
+                                            </a>
+                                            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                              <span class="sr-only">Next</span>
+                                            </a>
+                                          </div>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
