--- a/team.html
+++ b/team.html
@@ -66,7 +66,7 @@
                         <a href="project.html" class="dropdown-item">Our Projects</a>
                         <a href="team.html" class="dropdown-item active">Team Members</a>
                         <a href="appointment.html" class="dropdown-item">Appointment</a>
-                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+                        <a href="testimonial.html" class="dropdown-item">Customers & Partners</a>
                         <a href="404.html" class="dropdown-item">404 Page</a>
                     </div>
                 </div>
