--- a/project.html
+++ b/project.html
@@ -112,21 +112,21 @@
                     </div>
                 </div>
                 <div class="col-lg-8">
-                    <div class="tab-content w-100">
+                    <div class="tab-content w-100 h-100">
                         <div class="tab-pane fade show active" id="tab-pane-1">
                             <div class="row g-4">
                                 <div class="col-md-6" style="min-height: 350px;">
-                                    <div class="position-relative h-100">
+                                    <div class="position-relative w-100 h-100">
                                         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                                             <div class="carousel-inner">
                                               <div class="carousel-item active">
-                                                <img class="d-block w-100" src="/img/zawaya-1.jpg" alt="First slide">
+                                                <img class="d-block h-100 w-100" src="/img/zawaya-1.jpg" alt="First slide">
                                               </div>
                                               <div class="carousel-item">
-                                                <img class="d-block w-100" src="/img/zawaya-2.jpg" alt="Second slide">
+                                                <img class="d-block h-100 w-100" src="/img/zawaya-2.jpg" alt="Second slide">
                                               </div>
                                               <div class="carousel-item">
-                                                <img class="d-block w-100" src="/img/zawaya-3.jpg" alt="Third slide">
+                                                <img class="d-block h-100 w-100" src="/img/zawaya-3.jpg" alt="Third slide">
                                               </div>
                                             </div>
                                             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
